# safe-struct

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  benchmark.sh  pyproject.toml
.github/workflows/: workflow.yml
safestruct/: __init__.py  core.py  descriptors.py  enums.py  exceptions.py
tests/: defs.py  test_array.py  test_buffer.py  test_bytes.py  test_core.py  test_float.py  test_int.py  test_substruct.py  test_text.py
